tests/ui/simd/repr-simd-on-enum.stderr
error: `#[repr(simd)]` attribute cannot be used on enums
  --> $DIR/repr-simd-on-enum.rs:5:1
   |
LL | #[repr(simd)]
   | ^^^^^^^^^^^^^
   |
   = help: `#[repr(simd)]` can only be applied to structs

error: aborting due to 1 previous error

